--- a/bio.html
+++ b/bio.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed:600" rel="stylesheet">
 </head>
 <body>
-<img src="assets/images/arrow.png" class="back" onclick="window.location.href='main.html'"/>
+<img src="assets/images/arrow.png" class="back" onclick="window.location.href='index.html'"/>
     <img src="assets/images/bio-header.jpg" class="background-image">
 
 
