--- a/bio.html
+++ b/bio.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116472004-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-116472004-1');
+    </script>
+
     <meta charset="UTF-8">
     <title>HJS - BIO</title>
     <link href="assets/style/bio.css" rel="stylesheet">
@@ -51,25 +61,18 @@
                 </div>
 
                 <div class="detail">
-                    <p>
-                        Bachelor of Science
-                        <p class="sub-detail">
-                            - Computer Science Specialist</br>
-                            - Statistics Major</br>
-                            - Mathematics Minor
-                        </p>
-
-
+                    <p>Bachelor of Science</p>
+                    <p class="sub-detail">
+                        - Computer Science Specialist</br>
+                        - Statistics Major</br>
+                        - Mathematics Minor
                     </p>
-                    <p>
-                        Extra-Curricular
+                    <p>Extra-Curricular</p>
                     <p class="sub-detail">
                         - HAKCS</br>
                         - SLC: Second Year Learning Community
                     </p>
 
-
-                    </p>
                 </div>
             </div>
             <!--LSS-->
